--- a/app/locales/taiga/locale-en.json
+++ b/app/locales/taiga/locale-en.json
@@ -1037,6 +1037,8 @@
         "ACTIVITIES_COUNT": "{{activities}} Activities",
         "REMOVED": "removed",
         "ADDED": "added",
+        "TAGS_ADDED": "tags added: {{tags}}",
+        "TAGS_REMOVED": "tags removed: {{tags}}",
         "US_POINTS": "{{role}} points",
         "NEW_ATTACHMENT": "new attachment:",
         "DELETED_ATTACHMENT": "deleted attachment:",
